--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,29 @@
   <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rock-Paper-Scissors</title>
+    <title>Roshambo</title>
     <link rel="stylesheet" href="/screen.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <header> Roshambo!
+    </header>
+    <main>
+    <section class='player-1'>
+      <h1> Player 1</h1>
+      <button class='rock'><img src="./image/Rock.png"></button>
+      <button class='paper'><img src="./image/Paper.png"></button>
+      <button class='scissors'><img src="./image/Scissors.png"></button>
+    </section>
+    <section class='player-2'>
+      <h1> Player 2</h1>
+      <button class='rock'><img src="./image/Rock.png"></button>
+      <button class='paper'><img src="./image/Paper.png"></button>
+      <button class='scissors'><img src="./image/Scissors.png"></button>
+    </section>
+  </main>
+
+  <footer>
+  </footer>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
